[gd_scene load_steps=3 format=3 uid="uid://bqo8kj4co547p"]

[ext_resource type="Script" path="res://Menus/settings_menu.gd" id="1_o2jdi"]
[ext_resource type="Script" path="res://Menus/back.gd" id="2_tt42w"]

[node name="Settings" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_o2jdi")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.811866, 0.626964, 0.430132, 1)

[node name="Volume" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -358.0
offset_top = -153.0
offset_right = 358.0
offset_bottom = 50.0
grow_horizontal = 2
grow_vertical = 2

[node name="Master_Label" type="Label" parent="Volume"]
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 32
text = "Master Volume"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Master Volume" type="HSlider" parent="Volume"]
layout_mode = 2
size_flags_vertical = 3
max_value = 1.0
step = 0.01

[node name="Music_Label" type="Label" parent="Volume"]
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 32
text = "Music Volume"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Music Volume" type="HSlider" parent="Volume"]
layout_mode = 2
size_flags_vertical = 3
max_value = 1.0
step = 0.01

[node name="SFX_Label" type="Label" parent="Volume"]
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 32
text = "SFX Volume"
horizontal_alignment = 1
vertical_alignment = 1

[node name="SFX Volume" type="HSlider" parent="Volume"]
layout_mode = 2
size_flags_vertical = 3
max_value = 1.0
step = 0.01

[node name="Buttons" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -105.0
offset_top = -102.0
offset_right = 106.0
offset_bottom = -39.0
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/separation = 16
alignment = 1

[node name="Confirm" type="Button" parent="Buttons"]
layout_mode = 2
size_flags_horizontal = 3
text = "Confirm"

[node name="Back" type="Button" parent="Buttons"]
layout_mode = 2
size_flags_horizontal = 3
text = "Back"
script = ExtResource("2_tt42w")

[node name="CheckBox" type="CheckBox" parent="."]
visible = false
layout_mode = 0
offset_left = 366.0
offset_top = 247.0
offset_right = 623.0
offset_bottom = 411.0

[connection signal="mouse_exited" from="Volume/Master Volume" to="." method="_on_master_volume_mouse_exited"]
[connection signal="mouse_exited" from="Volume/Music Volume" to="." method="_on_music_volume_mouse_exited"]
[connection signal="mouse_exited" from="Volume/SFX Volume" to="." method="_on_sfx_volume_mouse_exited"]
[connection signal="pressed" from="Buttons/Confirm" to="." method="_on_confirm_pressed"]
[connection signal="pressed" from="Buttons/Back" to="Buttons/Back" method="_on_pressed"]
